// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="portfolio-freshness"
>
  <FormattedMessage
    defaultMessage="portfolio.was_x_y"
    id="portfolio.was_x_y"
    values={
      Object {
        "date": <DateFromNow
          date="2017-01-02T00:00:00.000Z"
        />,
        "rating": <Rating
          small={true}
          value={2}
        />,
      }
    }
  />
</div>
`;

exports[`renders empty 1`] = `
<div
  className="portfolio-freshness"
/>
`;

exports[`renders has always been 1`] = `
<div
  className="portfolio-freshness"
>
  <FormattedMessage
    defaultMessage="portfolio.has_always_been_x"
    id="portfolio.has_always_been_x"
    values={
      Object {
        "rating": <Rating
          small={true}
          value="A"
        />,
      }
    }
  />
</div>
`;
